--- a/index.html
+++ b/index.html
@@ -417,11 +417,10 @@ header p {
 
 .chart-card {
   background: var(--card);
-  border: 1px solid rgba(255,255,255,0.12);
+  border: 1px solid var(--card-border);
   border-radius: var(--radius);
   padding: 32px;
   transition: all 0.3s ease;
-  box-shadow: 0 2px 16px rgba(0,0,0,0.25);
 }
 
 .chart-card:hover {
@@ -453,12 +452,11 @@ header p {
 
 .chart-center-label {
   position: absolute;
-  top: 45%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   pointer-events: none;
-  width: 100%;
 }
 
 .chart-center-label .center-amount {
@@ -466,12 +464,11 @@ header p {
   font-weight: 800;
   color: var(--text);
   letter-spacing: -0.02em;
-  line-height: 1.2;
 }
 
 .chart-center-label .center-label {
   font-size: 0.7rem;
-  color: rgba(255,255,255,0.5);
+  color: var(--text-muted);
   text-transform: uppercase;
   letter-spacing: 0.08em;
   font-weight: 500;
@@ -491,7 +488,7 @@ header p {
   padding: 0;
   position: relative;
   color: #2a2a2a;
-  box-shadow: 0 4px 24px rgba(0,0,0,0.4), 0 0 0 1px rgba(255,255,255,0.1);
+  box-shadow: 0 4px 24px rgba(0,0,0,0.3);
   overflow: visible;
 }
 
@@ -647,13 +644,12 @@ header p {
 /* ═══ LOCAL PLACEHOLDER ═══ */
 .local-placeholder {
   background: var(--card);
-  border: 1px solid rgba(255,255,255,0.12);
+  border: 1px solid var(--card-border);
   border-radius: var(--radius);
   padding: 36px;
   text-align: center;
   margin-bottom: 56px;
   transition: all 0.3s;
-  box-shadow: 0 2px 16px rgba(0,0,0,0.25);
 }
 
 .local-placeholder:hover {
@@ -750,15 +746,11 @@ footer a:hover {
   header h1 { font-size: 2rem; }
   .input-grid { grid-template-columns: 1fr; }
   .input-card { padding: 24px; }
-  .charts-grid, .receipt-grid { grid-template-columns: 1fr; gap: 24px; }
-  .summary-bar { padding: 24px 16px; scroll-margin-top: 16px; margin-bottom: 28px; }
+  .charts-grid, .receipt-grid { grid-template-columns: 1fr; }
+  .summary-bar { padding: 24px 16px; }
   .summary-item .value { font-size: 1.3rem; }
   .chart-card { padding: 24px; }
   .receipt-inner { padding: 24px 20px 28px; }
-  .charts-grid { margin-bottom: 28px; }
-  .receipt-grid { margin-bottom: 28px; }
-  .local-placeholder { margin-bottom: 40px; }
-  #results { padding-top: 16px; }
 }
 
 /* ═══ SCROLLBAR ═══ */
@@ -1424,14 +1416,12 @@ function createPieChart(canvasId, labels, data, colors) {
       plugins: {
         legend: {
           position: 'bottom',
-          maxWidth: window.innerWidth < 700 ? 999 : undefined,
           labels: {
-            padding: window.innerWidth < 700 ? 10 : 10,
+            padding: 10,
             usePointStyle: true,
-            pointStyleWidth: window.innerWidth < 700 ? 12 : 8,
+            pointStyleWidth: 8,
             color: '#8892a4',
-            font: { family: "'Inter', sans-serif", size: window.innerWidth < 700 ? 12 : 10.5 },
-            boxWidth: window.innerWidth < 700 ? 12 : 8,
+            font: { family: "'Inter', sans-serif", size: 10.5 },
             generateLabels(chart) {
               return chart.data.labels.map((label, i) => ({
                 text: label + ' · ' + fmtDollar(chart.data.datasets[0].data[i]),
@@ -1594,14 +1584,7 @@ function calculate() {
     });
   }, 50);
 
-  // Scroll to summary bar with offset so it's fully visible
-  setTimeout(() => {
-    const summaryBar = document.querySelector('.summary-bar');
-    if (summaryBar) {
-      const y = summaryBar.getBoundingClientRect().top + window.pageYOffset - 20;
-      window.scrollTo({ top: y, behavior: 'smooth' });
-    }
-  }, 100);
+  results.scrollIntoView({ behavior: 'smooth', block: 'start' });
 }
 </script>
 </body>
