Update footer: built for free by Ralcorn Consulting

--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@ footer a:hover {
   </div>
   <p class="fine-print">Data: IRS (2025 brackets), Tax Foundation, CBO/OMB (FY2025 est.), Census Bureau.<br>
   Single filer, standard deduction. Informational only — not tax advice.<br>
-  Built by <a href="https://ralcorn.com" target="_blank">Ralcorn Consulting LLC</a></p>
+  Built for free by <a href="https://ralcorn.com" target="_blank">Ralcorn Consulting</a></p>
 </footer>
 
 <script>
